--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-/* 
-// Main CSS file for Trig Worms, alias Vermichrome
-// ©John Lynch - January-March 2024
-*/
+/* Final */
 
 html, body, * {
     background-color: #000;
